--- a/resources/css/nav.css
+++ b/resources/css/nav.css
@@ -1,8 +1,24 @@
+@font-face {
+    font-family: 'Zen Maru Gothic';
+    src: url('/fonts/ZenMaruGothic-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Zen Maru Gothic';
+    src: url('/fonts/ZenMaruGothic-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+.specific-element {
+    font-family: 'Zen Maru Gothic', sans-serif;
+    font-weight: 600;
+}
 .menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px 8%;
+    padding: .5% 8%;
     background-color: #ffffff;
 }
 .nav_logo img {
@@ -33,7 +49,7 @@ ul.dropdown-menu {
     float: left;
     min-width: 10rem;
     padding: .5rem 0;
-    margin-left: -5%;
+    margin-left: -3%;
     font-size: 1rem;
     color: #212529;
     text-align: left;
@@ -62,4 +78,21 @@ ul.dropdown-menu {
 
 .nav_switch ul li:hover .dropdown-menu {
     display: block;
+}
+/* 電腦版 */
+@media (max-width: 1080px) {
+    ul.dropdown-menu {
+        margin-left: -4%;
+    }
+}
+@media (max-width: 820px) {
+    ul.dropdown-menu {
+        margin-left: -5%;
+    }
+}
+/* 手機? */
+@media (max-width: 595px) {
+    ul.dropdown-menu {
+        margin-left: -10%;
+    }
 }
